--- a/components/boiling-wasp-go/overlays/development/deployment-patch.yaml
+++ b/components/boiling-wasp-go/overlays/development/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
+      - image: quay.io/rhtap_qe/rhtap-qe:10640cd306e5c781793eaf51d9ebae37724dfdbb@sha256:12b1cc6fb7d0372070086cc850ab2b071f10a7622090a8743eff77c5acb960ce
         name: container-image  
